--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,11 @@
 
   */
   --black: #bada55;
+  --main-color: skyblue;
 }
 
 .wrapper {
+  min-width: 200px;
   width: 100%;
   height: 100%;
   background-color: azure;
@@ -23,7 +25,7 @@
 
 .header {
   width: 100%;
-  background-color: skyblue;
+  background-color: var(--main-color);
   display: inline-flex;
   flex-wrap: wrap;
   align-items: center;
@@ -31,8 +33,7 @@
 }
 
 .header__logo {
-  max-width: 100%;
-  min-width: 50%;
+  flex-basis: 50%;
   display: inline-flex;
   align-items: center;
   flex-wrap: nowrap;
@@ -42,7 +43,8 @@
 }
 
 .header__logo h1 {
-  width: 50%;
+  flex-basis: auto;
+  flex-grow: 1;
   text-align: left;
   font-size: 2.2em;
   padding: 0.5em;
@@ -50,35 +52,37 @@
 }
 
 .header__logo h1 p {
+  border: 1px solid hotpink;
   font-size: 0.3em;
 }
 
 .header__logo span {
+  flex-basis: 50%;
   font-size: 0.8em;
-  width: 50%;
   padding: 1em;
   text-align: left;
 
-  border: 1px solid red;
+  border: 1px solid hotpink;
 }
 
 .header__right-side {
   display: inline-flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: center;
-  max-width: 100%;
-  min-width: 50%;
-  font-size: 0.9em;
+  flex-basis: 50%;
+  font-size: 0.8em;
   flex-grow: 1;
 }
 
 .header__menu {
-  width: 50%;
+  flex-grow: 1;
+  flex-basis: auto;
   text-align: center;
 }
 
 .header__socials {
-  width: 50%;
+  flex-grow: 1;
+  flex-basis: auto;
   text-align: center;
 }
 
@@ -95,28 +99,38 @@
   padding: 0.2em;
 }
 
+.main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 .content {
-  width: 100%;
   padding: 1em;
   margin-bottom: 1em;
 
   text-align: left;
   /*
+  width: 70%;
   width: calc(99% - 1em);
-*/
+  */
   border: 1px solid black;
 
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  /*
   gap: 1em;
+  */
+  gap: 1em;
+  flex-basis: 80%;
+  flex-grow: 1;
 }
 
 .content__center,
 .content__left,
 .content__right {
-  width: 49%;
+  flex-basis: auto;
   border: 1px solid gold;
   /*
   */
@@ -124,15 +138,15 @@
 }
 
 .content__center {
-  flex-basis: 100%;
+  flex-shrink: 1;
 }
 
 .content__left {
-  flex-basis: 20%;
+  flex-basis: auto;
 }
 
 .content__right {
-  flex-basis: 50%;
+  flex-basis: 30%;
 }
 
 .content h2 {
@@ -147,8 +161,52 @@
   font-size: 1.3em;
 }
 
-.footer {
+.menu {
+  flex-basis: 20%;
+  flex-grow: 1;
   padding: 1em;
+
+  /*
+  width: 20%;
+  */
+  background-color: var(--main-color);
+}
+
+.footer {
+  padding: 2em;
   text-align: center;
   border: 1px solid black;
+  background-color: var(--main-color);
+}
+
+@media (max-width: 1024px) {
+  .content {
+    flex-basis: 100%;
+  }
+  .menu {
+    flex-basis: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .header__logo {
+    flex-basis: 100%;
+  }
+
+  .header__logo h1 {
+    text-align: center;
+  }
+
+  /*
+  .header__logo h1 {
+    width: 50%;
+    text-align: left;
+    font-size: 2.2em;
+    padding: 0.5em;
+    border: 1px solid blue;
+  }
+*/
+  .header__logo span {
+    display: none;
+  }
 }
